2002-08-29  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log-security.in: Default session to true, otherwise
	user can't launch it when console helper is enabled.

2002-08-29  Glynn Foster  <glynn.foster@sun.com>

	* actions.c: (apply_actions): Fix another case of 'logview'. [sigh]

2002-08-29  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log-security.in: Point to gnome-system-log instead
	of logview. Thanks to Frederic for pointing this out.

2002-08-21  Glynn Foster  <glynn.foster@sun.com>

	* help/C/gnome-system-log-C.xml, gnome-system-log.omf: Updates
	from HEAD.

2002-08-09  Glynn Foster  <glynn.foster@sun.com>

	* gnome-system-log.1: Update man page.

2002-07-24  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* actions.c: Pass the command to execute twice for execlp (),
	so that the action happens. Fixes bug# 88207.

2002-07-08  Laavanya K R <laavanya.gopalan@wipro.com>

        * actions.c: Modified exec_action_in_db() to execute "action"
        by a combination of fork() and execlp() calls instead of
        executing through system().  There is a potential of Time of
        Check and Time of Use (TOCTOU) issues with system() since
        shell is spawned first and command's executed after a small
        time gap. Fixes #87110.

2002-07-05  Glynn Foster  <glynn.foster@sun.com>

        * gnome-system-log.desktop.in: s/DocPath/X-GNOME-DocPath.
        Now conforms to spec.

2002-06-19  Deepa Natarajan  <deepa.natarajan@wipro.com>

	* actions.c: Change the windows to dialog boxes. Set
     	atk relation between entry box and label, set mnemonics,
     	set default button, change title of dialog to "Actions",
     	position buttons to the right of the tree view. 
     	s/gtk_widget_set_usize/gtk_widget_set_size_request.

2002-06-12  Narayana Pattipati <narayana.pattipati@wipro.com>

        * monitor.c: In mon_read_new_lines function, as new lines are read,
        update the current position and start reading next set of lines from 