@@ -1,3 +1,7 @@
+2002-10-17  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* about.c: Unref the logo pixbuf. Fixing a leak.
+	
 2002-08-29  Glynn Foster  <glynn.foster@sun.com>
 
 	* gnome-system-log-security.in: Default session to true, otherwise
